[metadata]
name = rsnn
version = 1.0.1
author = Hugo Aguettaz
description = Recurrent Spiking Neural Network
long_description = This is a package for recurrent spiking neural networks (RSNN) in Python.
license_files = LICENSE.txt

[options]
python_requires = >=3.8, <4
install_requires = 
    pandas
    matplotlib
    numpy
    torch
    tqdm
    Ninja

[options.extras_require]
test = 
    pytest