[metadata]
name = rsnn
version = 3.0.0
author = Hugo Aguettaz
description = Recurrent Spiking Neural Network
long_description = This is a package for recurrent spiking neural networks (RSNN) in Python.
license_files = LICENSE.txt

[options]
python_requires = >=3.10, <4
install_requires = 
    numpy
    matplotlib
    pandas
    # seaborn
    tqdm
    scipy

[options.extras_require]
test = 
    pytest